--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
                 </h3>
                 <details class="steps__details steps__first mb-2">
                     <summary class="steps__summary">Вы присылаете нам сканы документов через Личный кабинет</summary>
-                    <p class="steps__text">Доступ в <span class="text__orange">Личный кабинет</span> вам будет
+                    <p class="steps__text">Доступ в <a href="#" class="steps__link">Личный кабинет</a> вам будет
                         предоставлен после идентификации на данной странице. Список необходимых документов будет
                         сформирован после прохождения опроса в Личном кабинете.</p>
                 </details>
