--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css?v=3">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -464,7 +464,27 @@
                 </div>
             </div>
         </section>
-
+        <section class="cta">
+            <div class="container">
+                <div class="row cta__block mx-auto">
+                    <div class="cta__img d-none d-md-block">
+                        <img src="img/cta.png" alt="CTA">
+                    </div>
+                    <div class="col-12 col-lg-7 cta__info">
+                        <h3 class="cta__title mb-3">Убедитесь в эффективности дистанционных консультаци
+                        </h3>
+                        <p class="cta__subtitle text">«Забота» сопровождает сотни тысяч людей<br> от Камчатки до
+                            Калининграда</p>
+                    </div>
+                    <form action="" method="post" class="col-12 col-lg-5 cta__form d-flex flex-column gap-3">
+                        <input type="text" placeholder="Ваше имя" class="text-center">
+                        <input type="tel" placeholder="Ваш телефон" class="text-center">
+                        <input type="email" placeholder="Ваша электронная почта" class="text-center">
+                        <button type="button" class="border-0 cta__btn">Обсудить условия</button>
+                    </form>
+                </div>
+            </div>
+        </section>
     </main>
     <footer class="footer">
         <div class="container">
@@ -494,7 +514,7 @@
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
         crossorigin="anonymous"></script>
-    <script src="script.js?v=3"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
