--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css?v=4">
+    <link rel="stylesheet" href="style.css?v=5">
 </head>
 
 <body>
@@ -39,12 +39,14 @@
                             по ставке 13%,<br>
                             мы поможем вам оформить и подать документы для получения налогового вычета</h2>
                         <div class="d-grid gap-4 d-md-flex justify-content-md-start">
-                            <a href="#" class="hero__btn-first text-decoration-none btn__orange text-center">Вернуть налоги</a>
+                            <a href="#" class="hero__btn-first text-decoration-none btn__orange text-center">Вернуть
+                                налоги</a>
                             <a href="#calculator" class="hero__btn-second btn btn__gray">Калькулятор вычета</a>
                         </div>
                     </div>
                     <div class="col-10 col-sm-8 col-lg-6 mx-auto mx-md-0">
-                        <img src="img/main.jpg" class="hero__img d-block mx-lg-auto img-fluid" alt="Hero Image" loading="lazy">
+                        <img src="img/main.jpg" class="hero__img d-block mx-lg-auto img-fluid" alt="Hero Image"
+                            loading="lazy">
                     </div>
                 </div>
             </div>
@@ -470,16 +472,24 @@
                     <div class="cta__img d-none d-md-block">
                         <img src="img/cta.png" alt="CTA">
                     </div>
-                    <div class="col-12 col-lg-7 cta__info">
+                    <div class="col-lg-7 cta__info">
                         <h3 class="cta__title mb-3">Убедитесь в эффективности дистанционных консультаци
                         </h3>
-                        <p class="cta__subtitle text">«Забота» сопровождает сотни тысяч людей<br> от Камчатки до
-                            Калининграда</p>
+                        <p class="cta__subtitle text">Мы работаем по всей России, без выходных</p>
                     </div>
-                    <form action="" method="post" class="col-12 col-lg-5 cta__form d-flex flex-column gap-3">
-                        <input type="text" placeholder="Ваше имя" class="text-center">
-                        <input type="tel" placeholder="Ваш телефон" class="text-center">
-                        <input type="email" placeholder="Ваша электронная почта" class="text-center">
+                    <form action="" method="post" class="col-lg-5 cta__form d-flex flex-column gap-3">
+                        <div class="form-floating">
+                            <input type="text" id="cta-name" placeholder="Ваше имя" class="form-control">
+                            <label for="cta-name">Ваше имя</label>
+                        </div>
+                        <div class="form-floating">
+                            <input type="tel" id="cta-tel" placeholder="Ваш телефон" class="form-control">
+                            <label for="cta-tel">Ваш телефон</label>
+                        </div>
+                        <div class="form-floating">
+                            <input type="email" id="cta-email" placeholder="Ваша электронная почта" class="form-control">
+                            <label for="cta-email">Ваша электронная почта</label>
+                        </div>
                         <button type="button" class="border-0 cta__btn">Обсудить условия</button>
                     </form>
                 </div>
@@ -514,7 +524,7 @@
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
         crossorigin="anonymous"></script>
-    <script src="script.js?v=4"></script>
+    <script src="script.js?v=5"></script>
 </body>
 
 </html>
