changing content preview

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://pravocard.ru/">
-    <meta property="og:title" content="Правокард">
+    <meta property="og:title" content="A 4 Able Taxes for you!">
     <meta property="og:description" content="">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
