usd promo spacing fixed

--- a/index.html
+++ b/index.html
@@ -528,17 +528,16 @@
                 <div class="d-flex flex-wrap gap-3 ps-2">
                     <p class="footer__text">© A 4 Able Tax Services, 2023</p>
                     <p class="footer__text">Address: 178 W Adams St., Stockton, CA 95204.</p>
-                    <p class="footer__text">Open Monday-Sunday, 9AM-5PM.
-                    </p>
+                    <p class="footer__text">Open Monday-Sunday, 9AM-5PM.</p>
                 </div>
-                <br><br><br><br><br><br>
-                <center>
-                    <ul class="nav-item"><a href="https://www.usdapps.tech" class="nav-link px-2 footer__link">Site Proudly Made By USD Apps</a>
-                </center>
+                
                 
                 </ul>
             </div>
         </div>
+        <center>
+                    <br><br><br><br><ul class="nav-item"><a href="https://www.usdapps.tech" class="nav-link px-2 footer__link">Site Proudly Made By USD Apps</a>
+        </center>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
         crossorigin="anonymous"></script>
