changing usd apps text

--- a/index.html
+++ b/index.html
@@ -541,7 +541,7 @@
             </div>
         </div>
         <center>
-                    <br><br><br><br><ul class="nav-item"><a href="https://www.usdapps.tech" class="nav-link px-2 footer__link">Site Proudly Made By USD Apps</a>
+                    <br><br><br><br><ul class="footer__text"><a href="https://www.usdapps.tech" class="nav-link px-2 footer__link">Site Proudly Made By USD Apps</a>
         </center>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
