changing jades pic

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                 
                 <div class="row justify-content-between mb-5 mx-1 options__items">
                     <div class="col-md-6 px-0 order-1 order-md-0">
-                        <img class="img-fluid" src="img/jade.png" alt="jade-a4able" loading="lazy">
+                        <img class="img-fluid" src="img/jade.jpg" alt="jade-a4able" loading="lazy">
                     </div>
                     <div class="col-md-6 options__item order-0 order-md-1">
                         <p class="options__subtitle">Meet <span class="text__orange">Jade Owyoung</span></p>
