--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                     </div>
                     <div class="col-md-6 options__item order-0 order-md-1">
                         <p class="options__subtitle">Meet <span class="text__orange">Jade Owyoung</span></p>
-                        <p class="text">Jade, the founder of A 4 Able Tax Services, is an experienced tax professional and notary public. She uses her many years of experience to put the highest amount of care into each and every client.</p>
+                        <p class="text">Jade, the founder of A 4 Able Tax Services, is an experienced tax pro. She uses her many years of experience to put the highest amount of care into each and every client.</p>
                     </div>
                 </div>
                 
